--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             justify-content: center;
             text-align: center;
             padding-top: 100px; /* Jarak dari header */
-            background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('https://placehold.co/1920x1080/e0e0e0/a0a0a0?text=Background+Bengkel+Las');
+            background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('https://ibb.co.com/m5wn84k3');
             background-size: cover;
             background-position: center;
         }
@@ -502,7 +502,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 <a href="#home">ASKA PRODUCTION</a><i class="" style="color: #ff4757;"></i>.</p>
+            <p>&copy; 2025 <a href="#home">ASKA PRODUCTION</a><i class="" style="color: #ff4757;"></i></p>
         </div>
     </footer>
 
