--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             justify-content: center;
             text-align: center;
             padding-top: 100px; /* Jarak dari header */
-            background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('https://ibb.co.com/m5wn84k3');
+            background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('<a href="https://ibb.co.com/m5wn84k3"><img src="https://i.ibb.co.com/jk2CRDmS/IMG-3961.jpg" alt="IMG-3961" border="0"></a>');
             background-size: cover;
             background-position: center;
         }
