--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Wujudkan Identitas Visual Bisnis Anda</h1>
-                    <p>Mewujudkan desain impian Anda dengan kualitas terbaik. Kami melayani pembuatan Letter timbul, Neon box, Papan nama, pagar, plat nomot, kanopi, teralis, dan konstruksi besi lainnya.</p>
+                    <p>Mewujudkan desain impian Anda dengan kualitas terbaik. Kami melayani pembuatan Letter timbul, Neon box, Papan nama, pagar, plat nomor, kanopi, teralis, dan konstruksi besi lainnya.</p>
                     <a href="#kontak" class="btn">Hubungi Kami Sekarang</a>
                 </div>
             </div>
@@ -487,7 +487,7 @@
                         <p>Jangan ragu untuk berkonsultasi dengan kami. Siap survei ke lokasi Anda.</p>
                         
                         <p><i class="fa-brands fa-whatsapp"></i> <a href="https://wa.me/6285227215613" target="_blank" style="text-decoration:none; color:var(--warna-teks);">085227215613</a></p>
-                        <p><i class="fa-solid fa-location-dot"></i>Jl. KH. Abdurrahman Wahid, Anget, Kalianget, Kec. Wonosobo, Kabupaten Wonosobo, Jawa Tengah</p>
+                        <p><i class="fa-solid fa-location-dot"></i>Jl. KH. Abdurrahman Wahid, Kalianget, Kalianget, Kec. Wonosobo, Kabupaten Wonosobo, Jawa Tengah</p>
                     </div>
                     
                     <div class="contact-form">
